# mimir

./: README.md
CL/: data.lisp  linalg.lisp  logistic.lisp  maxent.lisp  metrics.lisp  mimir-test.asd  mimir.asd  mimir.lisp  naive-bayes.lisp  optimizers.lisp  ovr.lisp  sparse.lisp  stat.lisp  test-tools.lisp  text.lisp
CL/examples/: 20ng-classification.lisp  logistic-test.lisp
CL/test/: data-test.lisp  linalg-test.lisp  logistic-test.lisp  maxent-test.lisp  mimir-test.lisp  naive-bayes-test.lisp  optimizers-test.lisp  ovr-test.lisp  sparse-test.lisp
CPP/: CMakeLists.txt
CPP/src/: data.cpp  data.h  main.cpp
CPP/src/examples/: logistic-test.cpp
mathematica/: LRL1.nb  MaxEnt notes.nb  data.wl  demonstration.nb  logistic-test.nb  logistic.wl  maxent-test.nb  maxent.wl  metrics.wl  mimir.wl  naivebayes.wl  numerics.wl  optimizers.wl  ovr-classifier.wl  test-tools.wl  text.wl
python/lib/mimir/data/: iris.py  mlclass.py  preprocessing.py  text.py
python/lib/mimir/data/test/: test_preprocessing.py
python/lib/mimir/logistic/: irls.py  l1.py  model.py
python/lib/mimir/logistic/test/: test_model.py  test_theano_graph.py
python/lib/mimir/maxent/: feature.py  model.py
python/lib/mimir/maxent/test/: test_model.py
python/lib/mimir/multiclass/: ovr.py
python/lib/mimir/multiclass/test/: test_ovr.py
python/lib/mimir/naivebayes/: dcm.py
python/lib/mimir/optimization/: conjugate_gd.py  newton.py  one_dim.py  steepest.py  stochastic_gd.py
python/lib/mimir/optimization/test/: test_conjugate_gd.py  test_newton.py  test_one_dim.py  (+2 more)
scala/: build.sbt
(+21 files in other folders)
